# Mummery

./: .gitignore  CMakeLists.txt  README.md  Resources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
headers/: mainwindow.h
src/: main.cpp  mainwindow.cpp
ui/: mainwindow.ui
